--- a/static/index.html
+++ b/static/index.html
@@ -87,6 +87,9 @@
 			</a>
 		</div>
 	</div>
-
+	
+	<script src="https://code.jquery.com/jquery.js"></script> 
+	<script src="js/bootstrap.min.js"></script> 
+	<script src="js/introHCI.js"></script>
 </body>
 </html>
